[package]
name = "cxc"
version = "0.1.0"
edition = "2021"

[dependencies]

logos = "0.12.0"

llvm-sys = { version = "150", optional = true }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"], optional = true }

cranelift = { version = "0.95.0", optional = true }
cranelift-jit = { version = "0.95.0", optional = true }
cranelift-module = { version = "0.95.0", optional = true }
cranelift-native = { version = "0.95.0", optional = true }

memoize = "0.3.1"
slotmap = "1.0.6"
indexmap = "1.9.2"
passable = { git = "https://github.com/amjoshuamichael/passable" }
lazy_static = "1.4.0"

bytemuck = { version = "1.12.3", optional = true, default-features = false }
region = { version = "3.0.0", optional = true }

cxc_derive = { git = "https://github.com/amjoshuamichael/cxc_derive" }

# these libraries are re-exported into cxc

glam = { version = "0.22.0", optional = true }

[dev-dependencies]
serial_test = "1.0.0"

[features]
default = ["backend-cranelift", "ffi-assertions"]
xc-debug = []
backend-debug = []
backend-llvm = ["llvm-sys", "inkwell"]
backend-cranelift = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
ffi-assertions = ["region"]
show-bytes = []

[profile.bench]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
