[package]
name = "cxc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high performance scripting language"
homepage = "http://amjoshuamichael.com/cxc/"
repository = "https://github.com/amjoshuamichael/cxc/"
readme = "README.md"
keywords = ["scripting", "scripting-language"]
categories = ["parser-implementations"]
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]

[dependencies]

logos = "0.12.0"

llvm-sys = { version = "150", optional = true }
inkwell = { version = "0.2", optional = true, features = ["llvm15-0"] }

cranelift = { version = "0.95", optional = true }
cranelift-jit = { version = "0.95", optional = true }
cranelift-module = { version = "0.95", optional = true }
cranelift-native = { version = "0.95", optional = true }

memoize = "0.3"
slotmap = "1"
indexmap = "1"
passable = "1"
lazy_static = "1"

bytemuck = { version = "1.12", optional = true, default-features = false }
region = { version = "3.0", optional = true }

cxc_derive = "0.1"

# these libraries are re-exported into cxc

glam = { version = "0.22", optional = true }

[dev-dependencies]
serial_test = "1.0.0"

[features]
default = ["backend-cranelift", "ffi-assertions"]
xc-debug = []
backend-debug = []
backend-llvm = ["llvm-sys", "inkwell"]
backend-cranelift = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
ffi-assertions = ["region"]
show-bytes = []

[profile.bench]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
