[package]
name = "cxc"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high performance scripting language"
homepage = "http://amjoshuamichael.com/cxc/"
repository = "https://github.com/amjoshuamichael/cxc/"
readme = "README.md"
keywords = ["scripting", "scripting-language"]
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]

[dependencies]

logos = "0.12.0"

llvm-sys = { version = "150", optional = true }
inkwell = { version = "0.2", optional = true, features = ["llvm15-0"] }

cranelift = { version = "0.101.3", optional = true }
cranelift-jit = { version = "0.101.3", optional = true }
cranelift-module = { version = "0.101.3", optional = true }
cranelift-native = { version = "0.101.3", optional = true }

slotmap = "1"
indexmap = "1"
passable = "1"
lazy_static = "1"
ahash = "0.8"

bytemuck = { version = "1", optional = true, default-features = false }
region = { version = "3", optional = true }
libc = { version = "0.2", optional = true }

cxc_derive = "0.2"

[features]
default = ["backend-cranelift", "ffi-assertions"]
xc-debug = []
mir-debug = []
backend-debug = []
backend-llvm = ["llvm-sys", "inkwell"]
backend-cranelift = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
backend-interpreter = ["region", "libc"]
ffi-assertions = ["region"]
show-bytes = []

[profile.test]
opt-level = 3
debug = true

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true
debug-assertions = false

[[bin]]
path = "src/tests.rs"
name = "tests"
test = true
